@@ -97,3 +97,15 @@ Changes to be committed:
 	modified:   Doc/K/T.2015.BugFree.cs
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+doubly_linked_list.2015/05/04.13_12_26.40.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   History.txt
+	new file:   ds & Algo/DS/A generic doubly linked list implementation/adlist.c
+	new file:   ds & Algo/DS/A generic doubly linked list implementation/adlist.h
+
